# rex

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  default.nix  flake.nix  justfile  pyproject.toml
.github/workflows/: build.yml  deploy.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/cli_tool/: cli_mod.rs
core/src/data_handler/: data_mod.rs  transport.rs
core/src/db/: db_mod.rs
core/src/mail_handler/: mail_mod.rs
core/src/server/: http_transport.rs  mod.rs  server_mod.rs  websocket_transport.rs
core/src/tcp_handler/: tcp_mod.rs
core/src/tui_tool/: app.rs  keybindings.rs  tui_mod.rs  ui.rs
core/src/tui_tool/tabs/: state.rs
core/src/tui_tool/widgets/: file_picker.rs  mod.rs
core/tests/: unit_tests.rs
db-support/: README.md
db-support/rex-docker/: dashboard.json  docker-compose.yml  init.sql  network.xml
src/: main.rs
src/cli_tool/: cli_mod.rs
src/data_handler/: data_mod.rs  mod.rs  transport.rs
src/db/: db_mod.rs
src/server/: http_transport.rs  mod.rs  server_mod.rs  websocket_transport.rs
src/tcp_handler/: tcp_mod.rs
src/tui_tool/: action.rs  app.rs  event.rs  keybindings.rs  mod.rs  theme.rs  ui.rs  update.rs
src/tui_tool/tabs/: chart.rs  mod.rs  state.rs
src/tui_tool/widgets/: file_picker.rs  popup.rs
tests/: unit_tests.rs
viewer/: Cargo.toml
