[package]
name = "rex-core"
edition = "2021"
version = "0.9.5"

[lib]
name = "rex_core"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies.pyo3]
version = "0.22.0"
optional = true

[features]
extension-module = ["pyo3/extension-module"]
default = []

[dependencies]
clap = { workspace = true }
lettre = { workspace = true }
toml = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
crossbeam = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-logger = { workspace = true }
itertools = { workspace = true }
dirs = { workspace = true }
clickhouse = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
regex = "1"
tempfile = "3.3"
